snap-confine (1.0.33ubuntu1) UNRELEASED; urgency=medium

  * Bring in changes from 1.0.33-1 from debian:
    - Rename source package to snap-confine.
    - Add debian/watch for upstream tarballs.

 -- Michael Hudson-Doyle <michael.hudson@ubuntu.com>  Fri, 01 Jul 2016 09:42:00 +1200

ubuntu-core-launcher (1.0.33) UNRELEASED; urgency=medium

  [ Zygmunt Krynicki ]
  * New upstream release
  * Break/Replace ubuntu-core-launcher << 1.0.32 so that packages upgrade
    correctly
  * Expose /run when --enable-rootfs-is-core-snap is used

  [ Jamie Strandboge ]
  * implement seccomp argument filtering (LP: #1446748)
  * debian/usr.bin.snap-confine: allow read of /dev/random and /dev/urandom
    (LP: #1595029)

  [ Zygmunt Krynicki ]
  * Set libexecdir to /usr/lib/snapd. This is done so that snapd can reliably
    locate and execute snap-confine regardless of the distribution install
    location. In the past we relied on ubuntu-core-launcher but with it going
    away (soon) we need a reliable way to find snap-confine now.
  * Build-depend on python3-docutils for rst2man

 -- Zygmunt Krynicki <zygmunt.krynicki@canonical.com>  Sun, 19 Jun 2016 00:46:10 +0200

ubuntu-core-launcher (1.0.30) yakkety; urgency=medium

  [ Zygmunt Krynicki ]
  * Rename the package and everything else from ubuntu-core-launcher to
    snap-confine
  * Allow for graceful migrations from ubuntu-core-launcher to snap-confine by
    providing both commands as binary packages, with proper dependencies and
    post-installation scripts that manage apparmor profile changes.
  * Discard the useless duplicate argument. Now snap-confine is invoked with
    'snap-name $SECURITY_TAG $COMMAND...'. Previously, security tag was
    duplicated. In the future this will change once again, so that security
    tag is derived from an argument containing $SNAP_NAME and $APP_NAME. 
  * Clean up tests so that shellcheck reports no more errors or warnings
  * Ensure that shellcheck reports no errors on each build